<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/buyerHomeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/buyer_home" />
    <item
        android:id="@+id/catalogFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/catalog" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/cart" />
    <item
        android:id="@+id/buyerProfileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
    <item
        android:id="@+id/logout_action"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />
</menu>
