<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/vendorDashboardFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/vendor_dashboard" />
    <item
        android:id="@+id/vendorProductsFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/products" />
    <item
        android:id="@+id/vendorOrdersFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/orders" />
    <item
        android:id="@+id/vendorProfileFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nit_rut" />
    <group android:id="@+id/logout_group">
        <item
            android:id="@+id/logout_action"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout" />
    </group>
</menu>
