<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="co.edu.compensar.voltcore.ui.auth.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_buyerHome"
            app:destination="@id/buyerHomeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_vendorDashboard"
            app:destination="@id/vendorDashboardFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_adminDashboard"
            app:destination="@id/adminDashboardFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="co.edu.compensar.voltcore.ui.auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_recovery"
            app:destination="@id/recoveryFragment" />
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_buyerHome"
            app:destination="@id/buyerHomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_to_vendorDashboard"
            app:destination="@id/vendorDashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_to_adminDashboard"
            app:destination="@id/adminDashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/recoveryFragment"
        android:name="co.edu.compensar.voltcore.ui.auth.RecoveryFragment"
        android:label="Recovery"
        tools:layout="@layout/fragment_recovery" />

    <fragment
        android:id="@+id/registerFragment"
        android:name="co.edu.compensar.voltcore.ui.auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_buyerHome"
            app:destination="@id/buyerHomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_register_to_vendorDashboard"
            app:destination="@id/vendorDashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Buyer Fragments -->
    <fragment
        android:id="@+id/buyerHomeFragment"
        android:name="co.edu.compensar.voltcore.ui.buyer.BuyerHomeFragment"
        android:label="@string/buyer_home">
        <action
            android:id="@+id/action_buyerHome_to_productDetail"
            app:destination="@id/productDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/catalogFragment"
        android:name="co.edu.compensar.voltcore.ui.buyer.CatalogFragment"
        android:label="@string/catalog">
        <action
            android:id="@+id/action_catalog_to_productDetail"
            app:destination="@id/productDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="co.edu.compensar.voltcore.ui.buyer.ProductDetailFragment"
        android:label="@string/product_detail" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="co.edu.compensar.voltcore.ui.buyer.CartFragment"
        android:label="@string/cart">
        <action
            android:id="@+id/action_cart_to_checkout"
            app:destination="@id/checkoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="co.edu.compensar.voltcore.ui.buyer.CheckoutFragment"
        android:label="@string/checkout">
        <action
            android:id="@+id/action_checkout_to_buyerHome"
            app:destination="@id/buyerHomeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/buyerProfileFragment"
        android:name="co.edu.compensar.voltcore.ui.buyer.BuyerProfileFragment"
        android:label="@string/profile">
        <action
            android:id="@+id/action_profile_to_orders"
            app:destination="@id/buyerOrdersFragment" />
    </fragment>
    <fragment
        android:id="@+id/buyerOrdersFragment"
        android:name="co.edu.compensar.voltcore.ui.buyer.BuyerOrdersFragment"
        android:label="Mis Pedidos"
        tools:layout="@layout/fragment_buyer_orders" />


    <!-- Vendor Fragments -->
    <fragment
        android:id="@+id/vendorDashboardFragment"
        android:name="co.edu.compensar.voltcore.ui.vendor.VendorDashboardFragment"
        android:label="@string/vendor_dashboard" />
    <fragment
        android:id="@+id/vendorProductsFragment"
        android:name="co.edu.compensar.voltcore.ui.vendor.VendorProductsFragment"
        android:label="@string/products">
        <action
            android:id="@+id/action_vendorProducts_to_form"
            app:destination="@id/vendorProductFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/vendorProductFormFragment"
        android:name="co.edu.compensar.voltcore.ui.vendor.VendorProductFormFragment"
        android:label="Formulario de Producto"
        tools:layout="@layout/fragment_vendor_product_form">
        <argument
            android:name="productId"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/vendorOrdersFragment"
        android:name="co.edu.compensar.voltcore.ui.vendor.VendorOrdersFragment"
        android:label="@string/orders" />
    <fragment
        android:id="@+id/vendorProfileFragment"
        android:name="co.edu.compensar.voltcore.ui.vendor.VendorProfileFragment"
        android:label="@string/nit_rut" />

    <!-- Admin Fragments -->
    <fragment
        android:id="@+id/adminDashboardFragment"
        android:name="co.edu.compensar.voltcore.ui.admin.AdminDashboardFragment"
        android:label="@string/admin_dashboard" />
    <fragment
        android:id="@+id/adminUsersFragment"
        android:name="co.edu.compensar.voltcore.ui.admin.AdminUsersFragment"
        android:label="@string/users" />
    <fragment
        android:id="@+id/adminModerationFragment"
        android:name="co.edu.compensar.voltcore.ui.admin.AdminModerationFragment"
        android:label="@string/moderation" />
    <fragment
        android:id="@+id/adminReportsFragment"
        android:name="co.edu.compensar.voltcore.ui.admin.AdminReportsFragment"
        android:label="@string/reports" />

    <fragment
        android:id="@+id/adminProductsFragment"
        android:name="co.edu.compensar.voltcore.ui.admin.AdminProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_admin_products" />

</navigation>
