<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/volt_background"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_standard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendor_orders_title"
            android:textColor="@color/volt_text_primary"
            android:textSize="@dimen/text_size_h2"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_business"
            android:textColor="@color/volt_text_secondary"
            android:textSize="@dimen/text_size_price" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialog_padding"
        android:background="@color/glass_surface"
        app:tabTextColor="@color/volt_text_primary"
        app:tabSelectedTextColor="@color/volt_primary"
        app:tabIndicatorColor="@color/volt_primary"
        app:tabIndicatorHeight="@dimen/tab_indicator_height"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabGravity="fill">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_pending" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_shipped" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_delivered" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingHorizontal="@dimen/margin_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_vendor_order" />

</LinearLayout>
